# a2a-cpp-sdk

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  echo_agent_with_server.cpp  jsonrpc_test.cpp
examples/client_demo/: main.cpp
examples/echo_agent/: main.cpp
examples/multi_agent_demo/: CMakeLists.txt  README.md  dynamic_math_agent.cpp  dynamic_orchestrator.cpp  interactive_client.cpp  redis_math_agent.cpp  redis_orchestrator.cpp  registry_server.cpp  start_redis_system.sh  test_redis_system.sh
src/core/: http_client.cpp
src/models/: agent_task.cpp
